// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageDropUploader /> should match snapshot 1`] = `
<div
  className="sc-gsnTZi hQNhSA k-ImageDropUploader"
>
  <input
    accept="image/jpeg, image/png, image/gif, image/webp"
    aria-describedby={null}
    disabled={false}
    id="ImageDropUploader"
    onChange={[Function]}
    type="file"
  />
  <label
    className="k-ImageDropUploader__button"
    htmlFor="ImageDropUploader"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <svg
      aria-hidden={true}
      className="k-ImageDropUploader__button__uploadIcon"
      fill="currentColor"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span
      className="k-ImageDropUploader__button__title"
    >
      
    </span>
    <span
      className="k-ImageDropUploader__button__text"
    >
      
    </span>
  </label>
</div>
`;

exports[`<ImageDropUploader /> should match snapshot with error 1`] = `
<div
  className="sc-gsnTZi hQNhSA k-ImageDropUploader k-ImageDropUploader--error"
>
  <div
    className="k-ImageDropUploader__manager"
  >
    <div
      aria-describedby="ImageDropUploader-cropper-description"
      className="k-ImageDropUploader__imageCropper k-ImageDropUploader__manager__cropper"
      id="ImageDropUploader-cropper"
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "--ImageDropUploader-cropHeight": "4.8828125rem",
        }
      }
      tabIndex={0}
    >
      <img
        alt=""
        onLoad={[Function]}
        src="/hello.jpg"
        style={
          Object {
            "--ImageDropUploader-cropX": "0px",
            "--ImageDropUploader-cropY": "0px",
          }
        }
      />
    </div>
    <div
      className="k-ImageDropUploader__manager__content"
      id="ImageDropUploader-cropper-description"
    >
      <div
        className="k-ImageDropUploader__manager__title"
      >
        Title
      </div>
      <div
        className="k-ImageDropUploader__manager__text"
      >
        Subtitle
      </div>
    </div>
    <button
      aria-label="Cancel"
      className="sc-bczRLJ bqosxP k-Button k-ImageDropUploader__manager__cancelButton k-Button--micro k-Button--nitrogen k-Button--fit-icon"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--Button-border-radius": 0,
          "--Button-bullet-color": null,
        }
      }
      title="Cancel"
      type="button"
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 17 18"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
          fill="var(--color-grey-900, #222)"
        />
      </svg>
    </button>
  </div>
  <p
    className="k-u-color-error k-u-size-micro k-u-weight-700 k-u-margin-top-noneHalf"
    id="ImageDropUploader-error-description"
    style={Object {}}
  >
    Error
  </p>
</div>
`;

exports[`<ImageDropUploader /> should match snapshot with props 1`] = `
<div
  className="sc-gsnTZi hQNhSA k-ImageDropUploader"
>
  <input
    accept="image/jpeg, image/png, image/gif, image/webp"
    aria-describedby={null}
    aria-label="Hello World!"
    disabled={false}
    id="ImageDropUploader"
    onChange={[Function]}
    type="file"
  />
  <label
    aria-label="Hello World!"
    className="k-ImageDropUploader__button"
    htmlFor="ImageDropUploader"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <svg
      aria-hidden={true}
      className="k-ImageDropUploader__button__uploadIcon"
      fill="currentColor"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span
      className="k-ImageDropUploader__button__title"
    >
      Title
    </span>
    <span
      className="k-ImageDropUploader__button__text"
    >
      Subtitle
    </span>
  </label>
</div>
`;

exports[`<ImageDropUploader /> should match snapshot with props 2`] = `
<div
  className="sc-gsnTZi hQNhSA k-ImageDropUploader k-ImageDropUploader--disabled"
>
  <input
    accept="image/jpeg, image/png, image/gif, image/webp"
    aria-describedby={null}
    aria-label="Hello World!"
    disabled={true}
    id="ImageDropUploader"
    onChange={[Function]}
    type="file"
  />
  <label
    aria-label="Hello World!"
    className="k-ImageDropUploader__button"
    htmlFor="ImageDropUploader"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <svg
      aria-hidden={true}
      className="k-ImageDropUploader__button__uploadIcon"
      fill="currentColor"
      height="13"
      viewBox="0 0 12 13"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M7 4.207v4H5v-4L3.172 6 1.757 4.62 6 0 10.243 4.62 8.828 6 7 4.207zM0 8h2v5H0zM10 8h2v5h-2zM0 11h12v2H0z"
      />
    </svg>
    <span
      className="k-ImageDropUploader__button__title"
    >
      Title
    </span>
    <span
      className="k-ImageDropUploader__button__text"
    >
      Subtitle
    </span>
  </label>
</div>
`;
